fix bug with design spacing

--- a/frontend/src/pages/Layout/Layout.css
+++ b/frontend/src/pages/Layout/Layout.css
@@ -9,4 +9,5 @@
   color: white;
   font-size: 1.5rem;
   font-weight: bold;
+  justify-content: space-between;
 }
